--- a/NewTest.html
+++ b/NewTest.html
@@ -4,5 +4,6 @@
 <li style="color:red;">HTML</li>
 <li style="color:blue;">CSS</li>
 <li style="color:green;">JavaScript</li>
+<li style="color:rgb(63, 116, 95);">PHP</li>
 <li>PHP</li>
 </ul>
